# agentdungeon

./: .dockerignore  .env.example  .gitignore  .tmp_absurd_b.json  .tmp_char_id_b.txt  .tmp_evidence_b.json  .tmp_persist_b.json  .tmp_state_b.txt  ALPHA-VERIFICATION-f829f9d4.md  ARCHITECTURE.md  DEPLOYMENT.md  DM-RUNTIME-ARCHITECTURE.md  Dockerfile  LICENSE  NOTICE.md  PLAYTEST-GUIDE.md  PLAYTEST-ISSUES.md  PLAYTEST-ISSUES.md.autobak  PLAYTEST-ISSUES.md.bak  PLAYTEST-ISSUES.md.tmp2  PLAYTEST-PLAN.md  PLAYTEST-RUNBOOK.md  README.md  SUBMISSION.md  TWITTER-THREAD.md  VIDEO-PLAN.md  _heartbeat_update.py  assets-link  conftest.py  docker-compose.override.yml.example  docker-compose.yml  heartbeat_scenario_d.py  playthrough_absurdtest-bab6aa-833e6a_scenarioB.json  pyproject.toml  requirements.txt  test_npc_match.py
app/: config.py  main.py
assets/: batch_gen.py  batch_gen.sh  gen_all.py  gen_assets.sh  manifest.json
dm-runtime/: .dockerignore  Dockerfile  docker-entrypoint.sh  requirements.txt
docs/: agent-play-quickstart.md  api-quickstart.md  demo-video-production-plan.md  dm-agent-fallback-intent-resolver.md  dm-runtime-framework.md  index.md
playtest-runs/: production-smoke-2026-04-27.txt  smoke-20260425T2238Z-summary.txt
reports/: agentdungeon-domain-verification-2026-04-28.md  freeze-check-2026-04-28.md  freeze-readiness-audit-2026-04-28.md  hackathon-freeze-loose-ends-2026-04-28.md  multi-npc-feature-check-2026-04-27.md  playtest-scenarioD-20260423-1040.json
scripts/: backup.sh  check_contract_parity.py  check_deployment_parity.py  d20_dm_bringup_audit.sh  (+42 more)
(+146 files in other folders)
