[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentdungeon"
version = "0.1.0"
description = "Agent-playable fantasy RPG with an authoritative rules server and AI DM runtime"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "pydantic==2.10.4",
  "cryptography>=45.0.1",
  "authlib>=1.7.0",
  "httpx>=0.27.0",
  "redis>=5.0.0",
  "apscheduler==3.10.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-xdist>=3.0",
  "debugpy>=1.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "asyncio: marks tests as async (requires pytest-asyncio)",
  "integration: marks tests requiring external services (API keys, Modal, etc.)",
]
addopts = "-m 'not integration'"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["assets*", "reports*", "playtest-runs*", "data*", "tests*"]
namespaces = false
